[package]
name = "jupyter-client"
version = "0.1.0"
authors = ["Simon Walker <s.r.walker101@googlemail.com>"]
description = "Jupyter client written in Rust"
homepage = "https://gitlab.com/srwalker101/rust-jupyter-client"
repository = "https://gitlab.com/srwalker101/rust-jupyter-client"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/jupyter-client"
edition = "2021"

[dependencies]
zmq = "0.10.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_derive = "1.0.193"
#uuid = { version = "0.7.1", features = ["v4"] }
hmac = "0.7.1"
sha2 = "0.8.2"
#hmac = "0.12.1"
#sha2 = "0.10.7"
hex = "0.4.3"
log = "0.4.20"
failure = "0.1.8"
digest = "0.10.7"
chrono = "0.4.31"
dirs = "5.0.1"
glob = "0.3.1"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
structopt = "0.3.26"
env_logger = "0.10"
crypto-mac = "0.11.1"
generic-array = "1.0.0"
